plugins {
  id 'maven-publish'
}

ext {
  /* Project Information */
  projectGroup = 'com.unideb.qsa'
  projectVersion = project.getProperties().get('release.version') ?: 'RELEASE.VERSION.UNKNOWN'
  /* Secrets */
  // Note: Use your username and token
  githubToken = System.getenv('GITHUB_TOKEN') ?: 'YOUR_TOKEN'
  githubUsername = System.getenv('GITHUB_USERNAME') ?: 'YOUR_USERNAME'
  print('Release version [' + projectVersion + ']')
}

apply plugin: 'maven'
apply plugin: 'checkstyle'
apply plugin: 'java'
apply plugin: 'java-library'

repositories {
  mavenLocal()
  mavenCentral()
  jcenter()
  maven {
    url 'https://jitpack.io'
  }
  maven {
    url 'https://maven.pkg.github.com/queueing-systems-assistance/qsa'
    credentials {
      username = githubUsername
      password = githubToken
    }
  }
}

checkstyle {
  toolVersion = '8.38'
  configFile = file("${rootDir}/support/code-formatting/checkstyle/checkstyle.xml")
  configDir = file("${rootDir}/support/code-formatting/checkstyle/")
  showViolations = true
  ignoreFailures = false
}

dependencies {
  /* QSA */
  implementation 'com.unideb.qsa:qsa-config-domain:1.0.9'
  /* OTHER */
  implementation 'org.slf4j:jcl-over-slf4j:1.7.30'
  implementation 'org.slf4j:slf4j-api:1.7.30'
  implementation 'com.google.code.gson:gson:2.8.6'
  testImplementation 'org.mockito:mockito-core:3.6.28'
  testImplementation 'org.testng:testng:7.3.0'
}

publishing {
  repositories {
    maven {
      name = 'GitHubPackages'
      url = uri('https://maven.pkg.github.com/queueing-systems-assistance/qsa')
      credentials {
        username = githubUsername
        password = githubToken
      }
    }
  }
  publications {
    gpr(MavenPublication) {
      from(components.java)
    }
  }
}

group = projectGroup
version = projectVersion
sourceCompatibility = '11'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}


test {
  useTestNG()
  scanForTestClasses = false
  testLogging {
    afterSuite { desc, result ->
      if (!desc.parent) {
        println "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
      }
    }
  }
}